Replace uses of `Arrays.asList()` with either List.of() or Collections.singletonList() (#4219)