@@ -7,7 +7,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -106,7 +105,7 @@ public class PipelineProcessor {
             Map<String, Object> parameters = pipelineOperation.getParameters();
             List<String> inputFileTypes = apiDocService.getExtensionTypes(false, operation);
             if (inputFileTypes == null) {
-                inputFileTypes = new ArrayList<String>(Arrays.asList("ALL"));
+                inputFileTypes = new ArrayList<>(List.of("ALL"));
             }
 
             if (!apiDocService.isValidOperation(operation, parameters)) {
